# poetry-git-dependency-repro

./: README.md  pyproject.toml
