[tool.poetry]
name = "poetry-git-dependency-repro"
version = "0.1.0"
description = ""
authors = ["Ion Alberdi <ion.alberdi@joinzoe.com>"]
readme = "README.md"
packages = [{include = "poetry_git_dependency_repro"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {git = "ssh://git@github.com/tiangolo/fastapi.git", rev="0.95.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
